v.0.11.0 Bump to Java 17, fixes some mistakes